@@ -1,26 +1,29 @@
 package org.entur.lamassu.util;
 
-import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 import org.entur.lamassu.cache.StationSpatialIndexId;
 import org.entur.lamassu.cache.VehicleSpatialIndexId;
 import org.entur.lamassu.model.entities.Station;
 import org.entur.lamassu.model.entities.Vehicle;
 import org.entur.lamassu.model.provider.FeedProvider;
 
-public class SpatialIndexIdUtil {
+/**
+ * Test helper class for creating spatial index IDs.
+ * This replaces the functionality of SpatialIndexService in tests.
+ */
+public class TestSpatialIndexBuilder {
 
-  private SpatialIndexIdUtil() {}
+  private TestSpatialIndexBuilder() {}
 
-  public static VehicleSpatialIndexId createVehicleSpatialIndexId(
+  public static VehicleSpatialIndexId createVehicleIndexId(
     Vehicle vehicle,
-    FeedProvider feedProvider
+    FeedProvider provider
   ) {
     var id = new VehicleSpatialIndexId();
     id.setId(vehicle.getId());
-    id.setCodespace(feedProvider.getCodespace());
-    id.setSystemId(feedProvider.getSystemId());
-    id.setOperatorId(feedProvider.getOperatorId());
+    id.setCodespace(provider.getCodespace());
+    id.setSystemId(provider.getSystemId());
+    id.setOperatorId(provider.getOperatorId());
     id.setFormFactor(vehicle.getVehicleType().getFormFactor());
     id.setPropulsionType(vehicle.getVehicleType().getPropulsionType());
     id.setReserved(vehicle.getReserved());
@@ -28,36 +31,34 @@ public class SpatialIndexIdUtil {
     return id;
   }
 
-  public static StationSpatialIndexId createStationSpatialIndexId(
+  public static StationSpatialIndexId createStationIndexId(
     Station station,
-    FeedProvider feedProvider
+    FeedProvider provider
   ) {
     var id = new StationSpatialIndexId();
     id.setId(station.getId());
-    id.setCodespace(feedProvider.getCodespace());
-    id.setSystemId(feedProvider.getSystemId());
-    id.setOperatorId(feedProvider.getOperatorId());
+    id.setCodespace(provider.getCodespace());
+    id.setSystemId(provider.getSystemId());
+    id.setOperatorId(provider.getOperatorId());
+
     if (station.getVehicleTypesAvailable() != null) {
       id.setAvailableFormFactors(
         station
           .getVehicleTypesAvailable()
           .stream()
           .map(vta -> vta.getVehicleType().getFormFactor())
-          .collect(Collectors.toList())
+          .toList()
       );
       id.setAvailablePropulsionTypes(
         station
           .getVehicleTypesAvailable()
           .stream()
           .map(vta -> vta.getVehicleType().getPropulsionType())
-          .collect(Collectors.toList())
+          .toList()
       );
     } else {
-      // Note: in case no validation is activated, this issue would slip
-      // silently. On the other hand, logging it here for every station would
-      // be overwhelming...
-      id.setAvailableFormFactors(Collections.emptyList());
-      id.setAvailablePropulsionTypes(Collections.emptyList());
+      id.setAvailableFormFactors(List.of());
+      id.setAvailablePropulsionTypes(List.of());
     }
 
     return id;
